package ru.savin.videostreaming;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class VideoStreamingApplication {
    public static void main(String[] args) {
        SpringApplication.run(VideoStreamingApplication.class, args);
    }
}
