package ru.savin.videostreaming.constant;

public class ControllerConstant {
    public static final String ROOT_PATH = "/api/video-streaming-service/";
}
