package ru.savin.videostreaming.constant;

public class GlobalExceptionHandlerMessageConstant {
    public static final String BASE_MESSAGE = "Unexpected exception occurred. ";
    public static final String ENTITY_NOT_FOUND_MESSAGE = "Failed to find entity. ";
}
